--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
     ]
   },
   "devDependencies": {},
-  "homepage": "https://infoshareacademy.github.io/jfddr1-coderki-app/public/index.htms"
+  "homepage": "https://infoshareacademy.github.io/jfddr1-coderki-app/public/index.html"
 }
