--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.24.0",
     "gh-pages": "^3.1.0",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
+    "react-big-calendar": "^0.28.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4"
